# gugugaga-agent-pet

./: .gitignore  PROMPT.md  README.md  package.json
apps/agent-server/: pyproject.toml
apps/agent-server/app/: main.py
apps/agent-server/app/security/: audit_log.py  permissions.py
apps/agent-server/app/storage/: db.py
apps/agent-server/app/tools/: command_whitelist.py  registry.py
apps/agent-server/config/: commands.example.json
apps/agent-server/tests/: conftest.py  test_approval_state.py  test_audit_log.py  test_command_intents.py  test_command_whitelist.py  test_permissions.py  test_storage_db.py  test_tool_registry.py
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/api/: types.ts  wsClient.ts
apps/desktop/src/components/: ChatPanel.tsx  ConfirmDialog.tsx  DebugPanel.tsx  StatusPanel.tsx
apps/desktop/src/pet/: PetSprite.tsx  animationManifest.ts  petState.ts
scripts/: check-alpha.mjs
