[project]
name = "gugugaga-agent-server"
version = "0.5.0"
description = "Phase 5 FastAPI backend with read-only tools, audit logging, approvals, and command whitelist skeleton"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "psutil>=6.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.uvicorn]
host = "127.0.0.1"
port = 8765

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
